# Investment-Research-Desk

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
data/fixtures/: gold_cpi.json
docs/: README.md  README.zh.md  current_implementation.md  lora_experiment_details.md  lora_training_wsl.md  windows_cli_guide.md  wsl_lora_adapter_guide.md
docs/assets/: investment-research-desk-hero-v2-script.md  investment-research-desk-hero-v2.html  investment-research-desk-hero-v3-script.md  investment-research-desk-hero-v3.html  investment-research-desk-hero-v4-script.md  investment-research-desk-hero-v4.html  investment-research-desk-hero-v5-script.md  investment-research-desk-hero-v5.html  investment-research-desk-hero-v6-script.md  investment-research-desk-hero-v6.html  investment-research-desk-hero.html
investment_research_desk/: __init__.py  cli.py  cli_contract.py  config.py  persistence.py  schemas.py  security.py  sentiment_runtime.py
investment_research_desk/agents/: __init__.py  contracts.py  core.py  prompts.py
investment_research_desk/dataflows/: __init__.py  interface.py  tools.py
investment_research_desk/eval/: __init__.py  suites.py
investment_research_desk/graph/: __init__.py  workflow.py
investment_research_desk/llm/: __init__.py  clients.py
scripts/: render_true30_gif.cjs
tests/: test_agent_contracts.py  test_cli.py  test_dataflows.py  test_eval.py  test_fmp_provider.py  test_guardrails.py  test_indicators.py  test_llm.py  test_lora.py  test_persistence.py  test_repo_hygiene.py  test_workflow.py
(+29 files in other folders)
