[project]
name = "investment-research-desk"
version = "0.1.0"
description = "Investment Research Desk / 投研策略台 CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "langgraph>=0.2.60",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
ird = "investment_research_desk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
